--- a/projects.html
+++ b/projects.html
@@ -45,21 +45,39 @@
             </a>
         </div>
     </nav>
-    <br>
-    <div class="container container-fluid" id="about">
-        <h3>About Me</h3>
-        <img src="public/images/mypic.jpg" id="pic">
-        <p>
-            A web developer with over 10 years of management, interpersonal and customer service skills, who is looking for a full-stack
-            development position. With a passion for creating beautiful and dynamic websites, Matthew uses CSS, JavaScript,
-            and jQuery, along with Node.js and Express, to develop unique and engaging projects. Having a keen eye for detail,
-            Matthew is able to identify, locate, and debug any issues present in projects, as well as follow specifications presented by the customer. Working with others is essential to being successful,
-            and having the ability to communicate, which has been developed through years of experience, shines through in
-            handling stressful situations and project deadlines.
-        </p>
-        <p>
-            When Matthew isn't coding, he is spending time with his wife and three kids, experiencing the culinary and craft beer scene in Tucson, playing guitar, and gaming. If you would like to work with Matthew on any projects you need done, feel free to leave your information him and he can discuss with you what your needs are and how he can best fulfill your vision.
-        </p>
+    <div class="container container-fluid" id="projects">
+        <h3>Projects</h3>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-10">
+                        <div class="carousel-item active">
+                            <a href="https://secret-tundra-62346.herokuapp.com/" target="_blank"><img class="d-block w-100"
+                                    src="public/images/getagig.PNG" alt="First slide"></a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://shadowlaq.github.io/GilaMonster1/" target="_blank"><img class="d-block w-100"
+                                    src="public/images/traveleer.PNG" alt="Second slide"></a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://mhidalgo83.github.io/unit-4-game/index.html" target="_blank"><img class="d-block w-100"
+                                    src="public/images/crystals.PNG" alt="Third slide"></a>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <div class="col-sm-1"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <footer class="footer bg-light">
         <div class="container">
