--- a/contact.html
+++ b/contact.html
@@ -45,27 +45,29 @@
             </a>
         </div>
     </nav>
-    <br>
-    <div class="container container-fluid" id="about">
-        <h3>About Me</h3>
-        <img src="public/images/mypic.jpg" id="pic">
-        <p>
-            A web developer with over 10 years of management, interpersonal and customer service skills, who is looking for a full-stack
-            development position. With a passion for creating beautiful and dynamic websites, Matthew uses CSS, JavaScript,
-            and jQuery, along with Node.js and Express, to develop unique and engaging projects. Having a keen eye for detail,
-            Matthew is able to identify, locate, and debug any issues present in projects, as well as follow specifications presented by the customer. Working with others is essential to being successful,
-            and having the ability to communicate, which has been developed through years of experience, shines through in
-            handling stressful situations and project deadlines.
-        </p>
-        <p>
-            When Matthew isn't coding, he is spending time with his wife and three kids, experiencing the culinary and craft beer scene in Tucson, playing guitar, and gaming. If you would like to work with Matthew on any projects you need done, feel free to leave your information him and he can discuss with you what your needs are and how he can best fulfill your vision.
-        </p>
+    <div class="container container-fluid animated fadeIn" id="contact">
+        <form>
+            <h3>Contact Me</h3>
+            <div class="form-group">
+                <label for="contactName">Name</label>
+                <input type="text" class="form-control" id="contact" placeholder="Enter Name Here">
+            </div>
+            <div class="form-group">
+                <label for="contactEmail">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Comments</label>
+                <textarea class="form-control" id="contactComments" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        </form>
     </div>
     <footer class="footer bg-light">
-        <div class="container">
-            <p>Copyright &copy; 2018 </p>
-        </div>
-    </footer>
+            <div class="container">
+                <p>Copyright &copy; 2018 </p>
+            </div>
+        </footer>
 </body>
 
 </html>
