--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/assets/css/style.css">
     <title>Portfolio</title>
 </head>
 
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contacts</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
             <a class=" nav-item nav-link " href="https://www.linkedin.com/in/matthew-hidalgo1/ " target="_blank
@@ -48,7 +48,7 @@
     <br>
     <div class="container container-fluid" id="about">
         <h3>About Me</h3>
-        <img src="public/images/mypic.jpg" id="pic">
+        <img src="public/assets/images/mypic.jpg" id="pic">
         <p>
             A web developer with over 10 years of management, interpersonal and customer service skills, who is looking for a full-stack
             development position. With a passion for creating beautiful and dynamic websites, Matthew uses CSS, JavaScript,
@@ -58,7 +58,7 @@
             handling stressful situations and project deadlines.
         </p>
         <p>
-            When Matthew isn't coding, he is spending time with his wife and three kids, experiencing the culinary and craft beer scene in Tucson, playing guitar, and gaming. If you would like to work with Matthew on any projects you need done, feel free to leave your information him and he can discuss with you what your needs are and how he can best fulfill your vision.
+            When Matthew isn't coding, he is spending time with his wife and three kids, experiencing the culinary and craft beer scene in Tucson, playing guitar, and gaming. If you would like to work with Matthew on any projects you need done, feel free to leave your information here and he can discuss with you what your needs are and how he can best fulfill your vision.
         </p>
     </div>
     <footer class="footer bg-light">
