--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/assets/css/style.css">
     <title>Portfolio</title>
 </head>
 
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contacts</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
             <a class=" nav-item nav-link " href="https://www.linkedin.com/in/matthew-hidalgo1/ " target="_blank
@@ -54,15 +54,22 @@
                     <div class="col-sm-10">
                         <div class="carousel-item active">
                             <a href="https://secret-tundra-62346.herokuapp.com/" target="_blank"><img class="d-block w-100"
-                                    src="public/images/getagig.PNG" alt="First slide"></a>
+                                    src="public/assets/images/getagig.PNG" alt="First slide"></a>
+                            <h5>Get-A-Gig</h5>
+                            <h6>A full-stack application that takes in user information, stores it in a mySQL database,and
+                                renders that information using Handlebars.js</h6>
                         </div>
                         <div class="carousel-item">
                             <a href="https://shadowlaq.github.io/GilaMonster1/" target="_blank"><img class="d-block w-100"
-                                    src="public/images/traveleer.PNG" alt="Second slide"></a>
+                                    src="public/assets/images/traveleer.PNG" alt="Second slide"></a>
+                            <h5>Traveleer</h5>
+                            <h6>An application using jQuery, AJAX, and responsive web-design to help with travel plans</h6>
                         </div>
                         <div class="carousel-item">
                             <a href="https://mhidalgo83.github.io/unit-4-game/index.html" target="_blank"><img class="d-block w-100"
-                                    src="public/images/crystals.PNG" alt="Third slide"></a>
+                                    src="public/assets/images/crystals.PNG" alt="Third slide"></a>
+                            <h5>Crystal Collector</h5>
+                            <h6>A game that uses jQuery to randomly generate numbers for the user to guess</h6>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
