updates to portfolio

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html class="animated fadeInLeft">
+<html class="animated fadeIn">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8">
@@ -17,9 +17,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <h2>Matthew Hidalgo</h2>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -28,44 +27,109 @@
                     <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projects</a>
+                    <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
             <a class=" nav-item nav-link " href="https://www.linkedin.com/in/matthew-hidalgo1/ " target="_blank
             ">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxNrf7qTEQAjDTFWgNo2IC4xsdpFuWXM3qE9OnTo_RuX0GGvJ15g
-            " alt="LinkedIn " height="50px " width="50px ">
+            "
+                    alt="LinkedIn " height="50px " width="50px ">
             </a>
             <a class="nav-item nav-link " href="https://github.com/mhidalgo83 " target="_blank ">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_VWGgNdkB9crH-iBNMMWwsNZUm24m7X-1jUISsNKMNVJt6IlB
-            " alt="GitHub " height="50px " width="50px ">
+            "
+                    alt="GitHub " height="50px " width="50px ">
             </a>
         </div>
     </nav>
-    <br>
-    <div class="container container-fluid" id="about">
-        <h3>About Me</h3>
-        <img src="public/assets/images/mypic.jpg" id="pic">
-        <p>
-            A web developer with over 10 years of management, interpersonal and customer service skills, who is looking for a full-stack
-            development position. With a passion for creating beautiful and dynamic websites, Matthew uses CSS, JavaScript,
-            and jQuery, along with Node.js and Express, to develop unique and engaging projects. Having a keen eye for detail,
-            Matthew is able to identify, locate, and debug any issues present in projects, as well as follow specifications presented by the customer. Working with others is essential to being successful,
-            and having the ability to communicate, which has been developed through years of experience, shines through in
-            handling stressful situations and project deadlines.
-        </p>
-        <p>
-            When Matthew isn't coding, he is spending time with his wife and three kids, experiencing the culinary and craft beer scene in Tucson, playing guitar, and gaming. If you would like to work with Matthew on any projects you need done, feel free to leave your information here and he can discuss with you what your needs are and how he can best fulfill your vision.
-        </p>
-    </div>
-    <footer class="footer bg-light">
+    <div class="jumbotron jumbotron-fluid" id="about">
         <div class="container">
-            <p>Copyright &copy; 2018 </p>
+            <h1 class="display-4">Hi, my name is Matt, and welcome to my portfolio.</h1>
+            <p class="lead">
+                I am a full-stack web developer that is passionate about learning new technologies and skills and
+                implementing them to create web applications that are functional, unique, and stunning to the eye.
+                Skillset includes React, React Native, MongoDB, Express, Node, mySQL, jQuery, JavaScript, Bootstrap,
+                HTML5, and CSS3, as well as communication and leadership skills from ten years in retail and restaurant
+                management. </p>
         </div>
-    </footer>
-</body>
+    </div>
+    <div id="projects"></div>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3">
+                <a href="https://shadowlaq.github.io/GilaMonster1/" target="_blank">
+                    <img class="img-fluid" src="./public/assets/images/traveleer.PNG" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                    <h3>Traveleer</h3>
+                    <p class="card-text">This is a travel application designed for those interested in learning more
+                        information about a destination before they travel. The application utilizes AJAX, jQuery, and
+                        responsive web design to create UI that is appealing to the eye.</p>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3">
+                <a href="https://mhidalgo83.github.io/guess-game/" target="_blank">
+                    <img class="img-fluid" src="./public/assets/images/guess.png" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                    <h3>Guess Game</h3>
+                    <p class="card-text">This application leverages React to update the DOM in real time, depending on
+                        which image is selected.</p>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3">
+                <a href="https://mhidalgo83.github.io/unit-4-game/index.html" target="_blank"><img class="img-fluid" src="./public/assets/images/crystals.PNG" alt="Card image cap"></a>
+                <div class="card-body">
+                    <h3>Crystal Collector</h3>
+                    <p class="card-text">This application uses jQuery to randomly select a different number for each
+                        crystal at the start of the game. </p>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3">
+                <a href="https://secret-tundra-62346.herokuapp.com/" target="_blank"><img class="img-fluid" src="./public/assets/images/getagig.PNG" alt="Card image cap"></a>
+                <div class="card-body">
+                    <h3>Get-A-Gig</h3>
+                    <p class="card-text">This is a full-stack application where job seekers can find temporary gigs.
+                        They application uses the MVC paradigm with Express and Node as the server, with a mySQL
+                        database supporting the back-end. Handlebars was used to render our data dynamically.</p>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+    </div>
+    <br>
+    <div id="contact"></div>
+    <div class="container container-fluid animated fadeIn" id="contact">
+        <form>
+            <h3>Contact Me</h3>
+            <div class="form-group">
+                <label for="contactName">Name</label>
+                <input type="text" class="form-control" id="contact" placeholder="Enter Name Here">
+            </div>
+            <div class="form-group">
+                <label for="contactEmail">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Comments</label>
+                <textarea class="form-control" id="contactComments" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        </form>
+    </div>
 
+</body>
 </html>
