--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<html class="animated fadeInLeft">
+<html class="animated fadeIn">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8">
@@ -18,7 +18,6 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <h2>Matthew Hidalgo</h2>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -64,11 +63,6 @@
             <button type="submit" class="btn btn-primary" id="submit">Submit</button>
         </form>
     </div>
-    <footer class="footer bg-light">
-        <div class="container">
-            <p>Copyright &copy; 2018 </p>
-        </div>
-    </footer>
 </body>
 
 
