--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-sm-2"></div>
             <div class="col-sm-3">
                 <a href="https://mhidalgo83.github.io/guess-game/" target="_blank">
-                    <img class="img-fluid" src="./public/assets/images/guess.png" alt="Card image cap">
+                    <img class="img-fluid" src="./public/assets/images/guess.PNG" alt="Card image cap">
                 </a>
                 <div class="card-body">
                     <h3>Guess Game</h3>
